# test-project-1

./: .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml
src/core/: exceptions.py  pagination.py  settings.py  urls.py
src/departments/: admin.py  models.py  serializers.py  urls.py  views.py
src/departments/migrations/: 0001_initial.py  0002_initial.py
src/employees/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/employees/migrations/: 0001_initial.py
src/projects/: admin.py  models.py  serializers.py  urls.py  views.py
src/projects/migrations/: 0001_initial.py
